# QAuth

./: CMakeLists.txt  README.md  qauth.pc.in
cmake/: InstallSettings.cmake
data/: CMakeLists.txt
data/pam/: qauth-autologin  qauth-login
example/: CMakeLists.txt  CheckPassApp.cpp  CheckPassApp.h  MinimalDMApp.cpp  MinimalDMApp.h  QMLApp.cpp  QMLApp.h  minimaldm.service.in  qmlapp.qml
src/: CMakeLists.txt
src/app/: Backend.cpp  Backend.h  QAuthApp.cpp  QAuthApp.h  Session.cpp  Session.h
src/app/backend/: PamBackend.cpp  PamBackend.h  PamHandle.cpp  PamHandle.h  PasswdBackend.cpp  PasswdBackend.h
src/common/: Messages.h  QAuthPrompt.cpp  QAuthRequest.cpp  SafeDataStream.cpp  config.h.in  prompt.h  prompt_p.h  request.h  request_p.h
src/lib/: Prompt.cpp  QAuth  QAuth.cpp  QAuth.h  QAuthPrompt.cpp  QAuthRequest.cpp  Request.cpp  prompt.h  qauth.h  request.h
test/: CMakeLists.txt  DataTransfer.cpp  DataTransfer.h
